Source/WebCore/platform/LayoutUnit.h
@@ -935,9 +935,18 @@ inline int floorToInt(LayoutUnit value)
     return value.floor();
 }
 
-inline float roundToDevicePixel(LayoutUnit value, float pixelSnappingFactor, bool needsDirectionalRounding = false)
+inline float roundToDevicePixel(LayoutUnit value, const float pixelSnappingFactor, bool needsDirectionalRounding = false)
 {
-    return roundf(((value.rawValue() - (needsDirectionalRounding ? LayoutUnit::epsilon() / 2.0f : 0)) * pixelSnappingFactor) / kEffectiveFixedPointDenominator) / pixelSnappingFactor;
+    auto roundInternal = [&] (float valueToRound) { return roundf((valueToRound * pixelSnappingFactor) / kEffectiveFixedPointDenominator) / pixelSnappingFactor; };
+
+    float adjustedValue = value.rawValue() - (needsDirectionalRounding ? LayoutUnit::epsilon() / 2.0f : 0);
+    if (adjustedValue >= 0)
+        return roundInternal(adjustedValue);
+
+    // This adjusts directional rounding on negative halfway values. It produces the same direction for both negative and positive values.
+    // It helps snapping relative negative coordinates to the same position as if they were positive absolute coordinates.
+    float translateOrigin = fabsf(adjustedValue - LayoutUnit::fromPixel(1));
+    return roundInternal(adjustedValue + (translateOrigin * kEffectiveFixedPointDenominator)) - translateOrigin;
 }
 
 inline float floorToDevicePixel(LayoutUnit value, float pixelSnappingFactor)
